Fix styling issue on safari

--- a/src/static/css/LeaveReview.css
+++ b/src/static/css/LeaveReview.css
@@ -7,6 +7,7 @@
 
 .Leave-review--header-div {
     display: flex;
+    flex-shrink: 0;
     align-items: end;
 }
 
